# rgmol

./: .gitignore  LICENSE  MANIFEST.in  README.md  TODO  extrac_adf.py  pyproject.toml  requirements.txt  setup.py  test_rgmol.py
.github/workflows/: publish.yml
rgmol/: __init__.py  calculate_CDFT.py  calculate_mo.py  calculate_orbitals.py  calculate_transition.py  dicts.py  example_script.py  examples.py  extrac_adf.py  extract_adf.py  extract_cube.py  extract_excited_states.py  extract_gaussian.py  extract_molden.py  extract_orca.py  general_function.py  grid.py  molecular_calculations.py  molecule.py  mult_extrac_adf.py  objects.py  plot_matplotlib.py  plot_plotly.py  plot_plt.py  plot_pyvista.py  plot_sphere.py  potential.py  read_save.py  rectilinear_grid_reconstruction.py  rgmol.py  threading_functions.py  write.py
rgmol/extrac/: extrac_adf.py
rgmol/output_examples/: SP_alpha_glucose_CDFT_W_Fukui.out  SP_alpha_glucose_CDFT_W_Fukui.run  input.out  input.run
rgmol/output_examples/CH3Br/: CH3Br.densities  CH3Br.densitiesinfo  CH3Br.engrad  CH3Br.gbw  CH3Br.inp  CH3Br.inthess.tmp  CH3Br.mkl  CH3Br.molden.input  CH3Br.opt  CH3Br.out  CH3Br.property.txt  CH3Br.xyz  CH3Br_job2.cis  CH3Br_job2.densities  CH3Br_job2.densitiesinfo  CH3Br_job2.gbw  CH3Br_job2.property.txt  CH3Br_trj.xyz  test_CH3Br.molden.input
rgmol/output_examples/CH3Cl/: CH3Cl.bas2  CH3Cl.citations.tmp  CH3Cl.densities  CH3Cl.densitiesinfo  CH3Cl.engrad  CH3Cl.gbw  CH3Cl.inp  CH3Cl.inthess.tmp  CH3Cl.molden.input  CH3Cl.opt  CH3Cl.out  CH3Cl.property.txt  CH3Cl.xyz  CH3Cl_job2.cis  CH3Cl_job2.densities  CH3Cl_job2.densitiesinfo  CH3Cl_job2.gbw  CH3Cl_job2.property.txt  CH3Cl_trj.xyz
rgmol/output_examples/Cube/: H2CO.mo59a.cube  H2CO.mo8a.cube  H2CO.mo9a.cube
rgmol/output_examples/H2CO/: H2CO.densities  H2CO.densitiesinfo  H2CO.engrad  H2CO.gbw  H2CO.inp  H2CO.inthess.tmp  H2CO.molden.input  H2CO.opt  H2CO.out  H2CO.property.txt  H2CO.xyz  H2CO_job2.cis  H2CO_job2.densities  H2CO_job2.densitiesinfo  H2CO_job2.gbw  H2CO_job2.property.txt  H2CO_trj.xyz
rgmol/output_examples/acrolein/: acrolein.densities  acrolein.densitiesinfo  acrolein.engrad  acrolein.gbw  acrolein.inp  acrolein.inthess.tmp  acrolein.molden.input  acrolein.opt  acrolein.out  acrolein.property.txt  acrolein.xyz  acrolein_job2.cis  acrolein_job2.gbw  (+4 more)
rgmol/plot_pyvista/: _NOCV.py  __init__.py  _functions.py  _group_molecules.py  _molecules.py  _vid.py
workflows/: publish-to-pypi.yml
(+105 files in other folders)
