[project]
name = "rgmol"
version = "0.1.0.14"
authors = [
	{name = "Rémi Grincourt", email = "remi.grincourt@ens-lyon.fr"},
]
description = "Visualization and computation of various chemical properties from DFT softwares"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["molecule","representation","dft","cdft","visualization","chemistry"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Programming Language :: Python :: 3.12",
]
dependencies = [
	"numpy",
	"scipy",
   	"periodictable",
	"pyvista"
]
[project.urls]
Repository = "https://github.com/re-gr/rgmol"

[build-system]
requires = ["setuptools","setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package.find]
where = ["rgmol/output_examples"]

[tool.setuptools]
include-package-data = true