[project]
name = "rgmol"
version = "0.1.1.2"
authors = [
	{name = "Rémi Grincourt", email = "remi.grincourt@ens-lyon.fr"},
]
description = "Visualization and computation of various chemical properties from DFT softwares. Its main purpose is to compute and visualize the condensed and non-condensed linear response function from CDFT."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["molecule","representation","dft","cdft","visualization","chemistry"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Programming Language :: Python :: 3.12",
]
dependencies = [
	"numpy",
	"scipy",
   	"periodictable",
	"pyvista"
]
[project.urls]
Repository = "https://github.com/re-gr/rgmol"
Documentation = "https://re-gr.github.io/re-gr/rgmol_wiki"

[build-system]
requires = ["setuptools","setuptools-scm"]
build-backend = "setuptools.build_meta"
